File upload for users

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,12 +1,12 @@
 doctype 5
-html lang="pt"
+html lang="en"
   head
     meta charset="utf-8"
     meta name="keywords" content=""
     meta name="description" content=""
 
     title
-      = page_title(app_name: 'example')
+      = page_title(app_name: 'ODONTO-FILES')
 
     link href="/favicon.ico" rel=("shortcut icon")
 
