--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,10 @@
 @import 'bourbon';
 @import 'base/base';
 @import 'neat';
+
+// @import "bootstrap-sprockets";
+// @import "bootstrap";
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
