--- a/app/views/documents/edit.html.slim
+++ b/app/views/documents/edit.html.slim
@@ -1,8 +1,8 @@
-h1 Editing document
+h1.page-header Editing document
 
 == render 'form'
 
-= link_to 'Show', @document
-'|
-= link_to 'Back', documents_path
-
+br/
+br/
+hr/
+= link_to 'Back', documents_path, class: 'btn btn-info'
