--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,9 +1,9 @@
-@import 'bourbon';
-@import 'base/base';
-@import 'neat';
+// @import 'bourbon';
+// @import 'base/base';
+// @import 'neat';
 
-// @import "bootstrap-sprockets";
-// @import "bootstrap";
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
@@ -20,28 +20,3 @@
  *
  *= require_self
  */
-
-body,html{
-      background-color: #f4f4f4;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      position: relative;
-      min-height: 100%;
-      height: 100%;
-    }
-
-    .container{
-      background-color: #fff;
-      border: 1px solid #e5e5e5;
-      left: 50%;
-      padding: 20px;
-      position: absolute;
-      text-align: center;
-      margin-top: 80px;
-      -ms-transform:  translateX(-50%);
-      -webkit-transform:  translateX(-50%);
-      transform:  translateX(-50%);
-      width: 80%;
-      -webkit-border-radius: 4px;
-      -moz-border-radius: 4px;
-      border-radius: 4px;
-    }
