--- a/app/views/documents/_form.html.slim
+++ b/app/views/documents/_form.html.slim
@@ -1,10 +1,18 @@
-= simple_form_for(@document, html: { multipart: true }) do |f|
+= simple_form_for(@document, html: { multipart: true, class: '' }) do |f|
   = f.error_notification
 
-  .form-inputs
-    = f.association :user
+  br/
+
+  .form-group
+    = f.association :user, label_html: { class: 'control-label'}, input_html: { class: 'form-control input-lg'}
+
+  br/
+
+  .form-group
     = f.input :file
     = f.hidden_field :file_cache
 
+  br/
+
   .form-actions
-    = f.button :submit
+    = f.button :submit, class: 'btn btn-success'
