--- a/app/views/documents/new.html.slim
+++ b/app/views/documents/new.html.slim
@@ -1,5 +1,8 @@
-h1 New document
+h1.page-header Upload document
 
 == render 'form'
 
-= link_to 'Back', documents_path
+br/
+br/
+hr/
+= link_to 'Back', documents_path, class: 'btn btn-info'
