--- a/app/views/application/_flash_messages.html.slim
+++ b/app/views/application/_flash_messages.html.slim
@@ -1,8 +1,8 @@
 - if flash[:warn] || flash[:alert]
-  .alert.alert-info #{flash[:warn]} #{flash[:alert]}
+  .alert.alert-warning #{flash[:warn]} #{flash[:alert]}
 - if flash[:notice] || flash[:success]
   .alert.alert-success #{flash[:notice]} #{flash[:success]}
 - if flash[:info]
   .alert.alert-info #{flash[:info]}
 - if flash[:error]
-  .alert.alert-error #{flash[:error]}
+  .alert.alert-danger #{flash[:error]}
